--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   shared_preferences: ^2.0.15
+  http: ^0.13.4
+  d_method: ^0.0.2
 
 dev_dependencies:
   flutter_test:
