--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   http: ^0.13.4
   d_method: ^0.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
